# mtc_ws

./: .gitignore  .rosinstall.bak  README.md
src/: .rosinstall  .rosinstall.bak
src/kinova-ros/kinova_moveit/robot_configs/j2s6s300_moveit_config/launch/: move_group_j2s6s300.launch  moveit.rviz
src/mtc_pickplace/: .gitignore  CMakeLists.txt  README.md  package.xml
src/mtc_pickplace/config/: jaco_config.yaml  mtc.rviz
src/mtc_pickplace/launch/: j2s6s300_mtc_demo.launch  jaco_demo.launch  pickplace.launch
src/mtc_pickplace/meshes/: screwdriver.stl
src/mtc_pickplace/src/: main.cpp  pickplace.cpp  tfBroadcaster.cpp
